syntax = "proto3";

option csharp_namespace = "Grpc.Server";

package greet;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Love {
  rpc IsSheLove (IsSheRequest) returns (IsSheReply);
}

message IsSheRequest {
  string name = 1;
}

message IsSheReply {
  bool result = 1;
}

